# xinfc

./: CMakeLists.txt  Makefile  build.sh  build_dummy.sh
include/: i2c_nfc_device.h  wifi.h
src/: xinfc-wsc.c
